fixing cards on mobile

--- a/css.css
+++ b/css.css
@@ -95,3 +95,8 @@ a {
 .content p {
   color: #121619
 }
+
+
+.card {
+  margin-top: 15px;
+}
